@@ -1,12 +1,13 @@
 #!/usr/bin/env sh
 # Copyright Martin Väth <martin@mvath.de>.
 # This is part of the schedule project.
+set -u
 
 # default for remain:
 remain=${SCHEDULE_REMAIN:-0}
 
 # Honour a possible first option to set remain:
-case $1 in
+case ${1-} in
 --no-remain|--noremain|-R)
 	remain=0
 	shift;;
@@ -14,7 +15,7 @@ case $1 in
 	remain=1
 	shift;;
 esac
-case ${remain:-n} in
+case ${remain:-0} in
 0|-*|[nfNF]*|[oO][fF]*)
 	remainA=
 	remainB=;;
